--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marmok</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>мой любимый блогер</h1>
@@ -12,7 +13,7 @@
         номер2 мармок
 
     </p>                                                       номер3 valera ghoster </p>
-    <p>                                                        номер4 валерий</p>
+    <p>                                                        номер4 веталя</p>
     <p>                                         спасибо им за детство
         <img src="images/вилли.jpg" alt="картинка вилли" width="194" height="194"> 
     </p>
@@ -22,7 +23,7 @@
     <li><p>                                         спасибо им за детство
 </ul>
 <li> <a href="https://ru.wikipedia.org/wiki/Marmok">Marmok информация тут
-                                                   010 1010101110 послушай музыку
+                                                   010 101010110 послушай музыку
 </a></li>
 <!--iframe src="https://www.yotube.com/embed/jDSZVLfLt_kU-W-J" 
 width="560"
